# packetProcessing

./: .gitignore  CDP_BatteryFactory.cpp  CDP_BatteryFactory.h  CDP_BatteryLogger.cpp  CDP_BatteryLogger.h  CDP_BatteryMonitor.cpp  CDP_BatteryPackets.cpp  CDP_BatteryPackets.h  CDP_BatteryParser.cpp  CDP_BatteryParser.h  CDP_BatteryPower.cpp  CDP_BatteryPower.h  CDP_BatteryStatus.cpp  CDP_BatteryStatus.h  CDP_Platform.h  CDP_TemplatePacketEngine.cpp  CDP_TemplatePacketEngine.h  CMakeLists.txt  Coding Task.docx  CodingTest.sln  CodingTest.vcxproj  CodingTest.vcxproj.filters  README.md  doxygen.cfg
Debug/: CodingTest.exe.recipe  CodingTest.vcxproj.FileListAbsolute.txt
Debug/CodingTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CodingTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/: CodingTest.exe.recipe  CodingTest.vcxproj.FileListAbsolute.txt
Release/CodingTest.tlog/: CL.command.1.tlog  CL.write.1.tlog  CodingTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
docs/latex/: CDP__BatteryFactory_8cpp.tex  CDP__BatteryFactory_8cpp__incl.md5  CDP__BatteryFactory_8h.tex  CDP__BatteryFactory_8h__dep__incl.md5  CDP__BatteryFactory_8h__incl.md5  CDP__BatteryLogger_8cpp.tex  CDP__BatteryLogger_8cpp__incl.md5  CDP__BatteryLogger_8h.tex  CDP__BatteryLogger_8h__dep__incl.md5  CDP__BatteryLogger_8h__incl.md5  CDP__BatteryMonitor_8cpp.tex  CDP__BatteryMonitor_8cpp__incl.md5  CDP__BatteryPackets_8cpp.tex  CDP__BatteryPackets_8cpp__incl.md5  CDP__BatteryPackets_8h.tex  CDP__BatteryPackets_8h__incl.md5  (+42 more)
(+18 files in other folders)
